feat: add authorization to endpoints
