# src/routes.js
@@ -7,10 +7,20 @@ const fundProject = require("./handlers/fundProjectHandler");
 const completeStage = require("./handlers/completeStageHandler");
 const withdrawFunds = require("./handlers/withdrawFundsHandler");
 
+const simpleAuth = config => async (request, reply, next) => {
+  if (!("x-api-key" in request.headers)) {
+    reply.code(403).send({ error: "Missing x-api-key header" });
+  }
+  if (request.headers["x-api-key"] !== config.apiKey) {
+    reply.code(403).send({ error: "Invalid x-api-key header" });
+  }
+};
+
 function getWalletDataRoute({ services, config }) {
   return {
     method: "GET",
     url: "/wallet/:id",
+    preHandler: [simpleAuth(config)],
     schema: getWalletData.schema(config),
     handler: getWalletData.handler({ config, ...services }),
   };
@@ -20,6 +30,7 @@ function createWalletRoute({ services, config }) {
   return {
     method: "POST",
     url: "/wallet",
+    preHandler: [simpleAuth(config)],
     schema: createWallet.schema(config),
     handler: createWallet.handler({ config, ...services }),
   };
@@ -29,6 +40,7 @@ function createProjectRoute({ services, config }) {
   return {
     method: "POST",
     url: "/project",
+    preHandler: [simpleAuth(config)],
     schema: createProject.schema(config),
     handler: createProject.handler({ config, ...services }),
   };
@@ -38,6 +50,7 @@ function getProjectRoute({ services, config }) {
   return {
     method: "GET",
     url: "/project/:hash",
+    preHandler: [simpleAuth(config)],
     schema: getProject.schema(config),
     handler: getProject.handler({ config, ...services }),
   };
@@ -47,6 +60,7 @@ function fundProjectRoute({ services, config }) {
   return {
     method: "POST",
     url: "/project/:hash",
+    preHandler: [simpleAuth(config)],
     schema: fundProject.schema(config),
     handler: fundProject.handler({ config, ...services }),
   };
@@ -56,6 +70,7 @@ function completeStageRoute({ services, config }) {
   return {
     method: "POST",
     url: "/project/:hash/stageId/:stageId",
+    preHandler: [simpleAuth(config)],
     schema: completeStage.schema(config),
     handler: completeStage.handler({ config, ...services }),
   };
@@ -65,6 +80,7 @@ function withdrawFundsRoute({ services, config }) {
   return {
     method: "POST",
     url: "/project/:hash/withdraw",
+    preHandler: [simpleAuth(config)],
     schema: withdrawFunds.schema(config),
     handler: withdrawFunds.handler({ config, ...services }),
   };
@@ -74,6 +90,7 @@ function getWalletBalanceRoute({ services, config }) {
   return {
     method: "GET",
     url: "/wallet/:id/balance",
+    preHandler: [simpleAuth(config)],
     schema: getWalletBalance.schema(config),
     handler: getWalletBalance.handler({ config, ...services }),
   };
